# Syncitol

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package.json
.github/workflows/: cep-ci.yml  cep-release.yml  ci.yml  release.yml  uxp-ci.yml  uxp-release.yml
CSXS/: manifest.xml
cep/: .gitignore  CHANGELOG.md  README.md  index.html  package.json
cep/CSXS/: manifest.xml
cep/css/: style.css
cep/installer/: syncitol-cep-installer.iss
cep/js/: main.js
cep/jsx/: sync.jsx
cep/scripts/: build-zxp.js  check-syntax.js  set-version.js  stage.js
css/: style.css
js/: dsp.js  main.js
jsx/: json2.js  sync.jsx
scripts/: build-zxp.js
tests/: dsp.test.js
uxp/: .gitignore  README.md  index.html  manifest.json  package.json
uxp/css/: style.css
uxp/js/: audio.js  dsp.js  main.js  pek.js  premiere.js
uxp/native/: CMakeLists.txt
uxp/native/src/: syncitol_decode.cpp  syncitol_decode.h
uxp/native/uxp/src/: module_syncitol.cpp
uxp/scripts/: build-ccx.js  build-ffmpeg-mac.sh  check-syntax.js  set-version.js
uxp/tests/: dsp.test.js
uxp/win/x64/: syncitol.uxpaddon
